# sentinel.ai

./: .gitignore  .sentinel_running_procs  COPILOTKIT_SYSTEM_OVERVIEW.md  DASHBOARD_REFINEMENT_SUMMARY.md  DEPLOYMENT_SUMMARY.md  FIX_AI_DOCUMENTATION.md  Fix-AI.py  MULTI_AGENT_SYSTEM_DOCS.md  PARALLEL_EXECUTION_IMPLEMENTATION.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  README.md  REAL_AGENT_DEPLOYMENT_CONFIRMED.md  SENTINEL_SYSTEM_FULL_OVERVIEW.txt  SYSTEM_OPTIMIZATION_HUB.py  agent.py  agent_state.py  copilot-agent-task-missions-optimization.txt  copilotkit-references.txt  copilotkit.txt  diagnostic_test.py  enhanced_cognitive_forge_engine.py  enhanced_multi_agent_system.py  main.py  manage_services.py  multi_agent_system.py  ngrok.yml  pyproject.toml  railway.toml  requirements.copilotkit.txt  requirements.txt  runtime-references.txt  sentinel-overview.txt  setup.ps1  test_real_agent_execution.py  update_deps.ps1
.github/: copilot-instructions.md
agent-engine/: .env  config.py  (+4 more)
desktop_app_backup_20250801_102814_563267/: .env  COMPREHENSIVE_SYSTEM_ENHANCEMENT_PLAN.txt  Fix-AI.py  MANUAL_TESTING_GUIDE.md  REAL_TIME_OBSERVABILITY_GUIDE.md  SENTINEL_SYSTEM_COMPREHENSIVE_OVERVIEW.txt  add_complexity_level_column.py  backup_metadata.json  cleanup_redundant_files.py  cognitive_engine_server.py  comprehensive_mission_test.py  debug_agent_execution.py  pyproject.toml  requirements_sentry.txt  setup.cfg  simple_agent_test.py  test_agent_execution_simple.py  test_background_task_simple.py  test_date_fixes.py  test_first_agent_deployment.py  test_live_streaming.py  test_real_time_data.py  test_system_upgrade.py  test_three_pillar_upgrade.py
desktop_app_backup_20250801_102814_563267/backups/fix_ai_backup_20250731_183559/: cognitive_engine_service.py
desktop_app_backup_20250801_102814_563267/config/: settings.py
desktop_app_backup_20250801_102814_563267/db/: sentinel_missions.db
desktop_app_backup_20250801_102814_563267/db/chroma_memory/: chroma.sqlite3
desktop_app_backup_20250801_102814_563267/logs/: fix_ai_comprehensive_report_1753990107.json  fix_ai_comprehensive_report_1753990374.json  system_optimization_report_20250730_113451.json  system_optimization_report_20250730_121059.json
desktop_app_backup_20250801_102814_563267/logs/fix_ai_reports/: fix_ai_report_20250731_134741.json  fix_ai_report_20250731_134819.json  fix_ai_report_20250731_135224.json  fix_ai_report_20250731_135306.json
desktop_app_backup_20250801_102814_563267/scripts/: fix_database_schema.py  start_sentinel.bat  start_sentinel.py
desktop_app_backup_20250801_102814_563267/src/: main.py
desktop_app_backup_20250801_102814_563267/src/agents/: advanced_agents.py
desktop_app_backup_20250801_102814_563267/src/models/: advanced_database.py  fix_railway_database.py
desktop_app_backup_20250801_102814_563267/src/utils/: guardian_protocol.py  onnxruntime_fix.py  sentry_integration.py
desktop_app_backup_20250801_102814_563267/static/css/: sentinel-dash.css
desktop_app_backup_20250801_102814_563267/templates/: index.html
desktop_app_backup_20250801_102814_563267/tests/: test_cognitive_forge.py
desktop_app_backup_20250801_102814_563267/wandb/run-20250731_125319-4t6rpnfm/: run-4t6rpnfm.wandb
desktop_app_backup_20250801_102814_563267/wandb/run-20250731_173025-9hkveet9/: run-9hkveet9.wandb
desktop_app_backup_20250801_102814_563267/wandb/run-20250801_030137-jnav3y61/: run-jnav3y61.wandb
(+1566 files in other folders)
