[tool.poetry]
name = "sentinel-cognitive-forge"
version = "6.0.0"
description = "Advanced Cognitive Forge system with AI capabilities"
authors = ["Sentinel AI Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
crewai = "^0.70.0"
langchain-google-genai = "^2.0.0"
chromadb = "^0.5.15"
loguru = "^0.7.2"
sqlalchemy = "^2.0.36"
psutil = "^6.1.0"
python-dotenv = "^1.0.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}
pydantic = "^2.10.0"
requests = "^2.32.0"
aiohttp = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
isort = "^5.13.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
