[tool.poetry]
name = "sentinel-desktop-app"
version = "3.0.0"
description = "Cognitive Forge AI Agent Engine - Desktop Edition"
authors = ["Sentinel AI Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
crewai = "^0.36.1"
crewai-tools = "^0.3.0"
langchain-google-genai = "^1.0.6"
langchain = "^0.2.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.30"
pysqlite3-binary = "^0.5.2"
chromadb = "^0.5.0"
psutil = "^5.9.8"
pydantic = "^2.8.0"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
